# rebellis-aws-gcp-migration

./: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  SECURITY_IMPROVEMENTS.md  alembic.ini  docker-compose.development.yml  docker-compose.monitoring.yml  docker-compose.staging.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  test_security.py
.github/workflows/: cd.yml  ci.yml  performance.yml
docker/: Dockerfile.motion  Dockerfile.whisper
docker/motion/: requirements.txt
docs/: README.md  glossary.md  quickstart.md
docs/api/: openapi.yaml
docs/architecture/: data-model.md  overview.md  sequence-diagrams.md  services.md  topology.md
docs/ci-cd/: branching.md  pipelines.md  releasing.md
docs/configs/: env-vars.md
docs/deployment/: autoscaling.md  helm.md  secrets.md  terraform.md
docs/diagrams/: architecture.mmd
docs/migration/: aws-to-gcp.md  cutover-checklist.md
docs/monitoring/: alerting.md  observability.md  slo.md
docs/operations/: README.md
docs/performance/: capacity-planning.md  tuning.md
docs/security/: compliance.md  policies.md  rbac.md  security.md  threat-model.md
docs/testing/: api-tests.md  chaos-testing.md  load-testing.md  strategy.md
migrations/: env.py
scripts/: backup.sh  cleanup.sh  deploy.sh  health-check.sh  migrate-database.sh  rollback.sh  setup.sh  ssl.sh  start-api.sh  test-runner.sh
src/: __init__.py  main.py  requirements.txt
tests/: __init__.py  conftest.py
(+175 files in other folders)
